<resources>
    <string name="app_name">Thinkchats</string>
    <string name="ok">Ok</string>
    <string name="please_check_your_connection">please check your connection</string>
    <string name="no_internet_connection_found">No internet connection found</string>
    <string name="oops">OOPS !</string>
    <string name="wifi">wifi</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_name">User Name</string>
</resources>
